css/styles.css
/* ... */
*,
*::after,
*::before {
    box-sizing: border-box;
}

/* Typography */
::selection {
    background: var(--color-primary);
    color     : #fff;
}


html {
    /* 62.5% of 16px = 10px */
    font-size: 62.5%;
}

body {
    font-family: Inter, Arial, Helvetica, sans-serif;
    font-size  : 2.4rem;
    line-height: 1.5;
    color      : var(--color-body);
}

h1,
h2,
h3 {
    color        : var(--color-headings);
    margin-bottom: 1rem;
    line-height  : 1.1;
}

h1 {
    /* 1 x font size of the html element */
    font-size: 7rem;
}

h2 {
    font-size: 4rem;
}

h3 {
    font-size  : 3rem;
    font-weight: 300;
}

p {
    margin-top: 0;
}

@media screen and (min-width: 1024px) {
    body {
        font-size: 1.8rem;
    }

    h1 {
        font-size: 8rem;
    }

    h2 {
        font-size: 4rem;
    }

    h3 {
        font-size: 2.4rem;
    }
}

/* Links */

a {
    text-decoration: none;
}

.link-arrow {
    color         : var(--color-accent);
    text-transform: uppercase;
    font-size     : 2rem;
    font-weight   : bold;
}

.link-arrow::after {
    content    : "-->";
    margin-left: 5px;
    transition : margin 0.15s;
    /*px because we want to be always the same margin*/
}

.link-arrow:hover::after {
    margin-left: 10px;
}

@media screen and (min-width: 1024px) {
    .link-arrow {
        font-size: 1.5rem;
    }
}

/* Badges */

.badge {
    /* nowrap : Prevent to wrap in a second line */
    border-radius: 20px;
    font-size    : 2rem;
    font-weight  : 600;
    padding      : 1rem 2rem;
    white-space  : nowrap;
}

/* block element modifier, BEM */
.badge--primary {
    background: var(--color-primary);
    color     : #fff;
}

.badge--secondary {
    background: var(--color-secondary);
    color     : #fff;
}

.badge--small {
    font-size: 1.6rem;
    padding  : 0.5rem 1.5rem;
}

@media screen and (min-width: 1024px) {
    .badge {
        font-size: 2rem;
    }

    .badge--small {
        font-size: 1.2rem;
    }
}

/* Lists */
.list {
    list-style  : none;
    padding-left: 0;
}

.list--inline .list__item {
    display     : inline-block;
    margin-right: 2rem;
}

.list--tick {
    list-style-image: url(../img/tick.svg);
    padding-left    : 3rem;
    color           : var(--color-headings);
}

.list--tick .list__item {
    padding-left : 0.5rem;
    margin-bottom: 1rem;
}

@media screen and (min-width: 1024px) {
    .list--tick .list__item {
        padding-left: 0;
    }
}

/* Icons */

.icon {
    width : 40px;
    height: 40px;
}

.icon--small {
    width : 30px;
    height: 30px;
}

.icon--primary {
    fill: var(--color-primary);
}

.icon--white {
    fill: #fff;
}

.icon-container {
    background     : #f3f9fa;
    width          : 64px;
    height         : 64px;
    border-radius  : 100%;
    display        : inline-flex;
    justify-content: center;
    align-items    : center;
}

.icon-container--accent {
    background: var(--color-accent);
}

/* Buttons */

.btn {
    border-radius : 40px;
    border        : 0;
    cursor        : pointer;
    font-size     : 1.8rem;
    font-weight   : 600;
    margin        : 1rem 0;
    outline       : 0;
    padding       : 2rem 3rem;
    text-align    : center;
    text-transform: uppercase;
    white-space   : nowrap;
}

.btn .icon {
    width         : 2rem;
    height        : 2rem;
    margin-right  : 1rem;
    vertical-align: middle;
}

.btn--primary {
    background: var(--color-primary);
    color     : #fff;
}

.btn--primary:hover {
    background: #3a8ffd;
}

.btn--secondary {
    background: var(--color-secondary);
    color     : #fff;
}

.btn--secondary:hover {
    background: #05cdf0;
}

.btn--accent {
    background: var(--color-accent);
    color     : #fff;
}

.btn--accent:hover {
    background: #ec3000;
}

.btn--card-color {
    background: #1b0760;
    color     : #fff;
}

.btn--card-color:hover {
    opacity: 0.8;
}

.btn--outline {
    background: #fff;
    color     : var(--color-headings);
    border    : 2px solid var(--color-headings);
}

.btn--outline:hover {
    background: var(--color-headings);
    color     : #fff;
}

.btn--stretched {
    padding-left : 6rem;
    padding-right: 6rem;
}

.btn--block {
    width  : 100%;
    display: inline-block;
}

@media screen and (min-width: 1024px) {
    .btn {
        font-size: 1.5rem;
    }
}

/* Inputs */
.input {
    border-radius: var(--border-radius);
    border       : 1px solid var(--color-border);
    color        : var(--color-headings);
    font-size    : 2rem;
    outline      : 0;
    padding      : 1.5rem 3.5rem;
}

::placeholder {
    color: #cdcbd7;
}

.input-group {
    border       : 1px solid var(--color-border);
    border-radius: var(--border-radius);
    display      : flex;
}

.input-group .input {
    border   : 0;
    flex-grow: 1;
    padding  : 1.5rem 2rem;
}

.input-group .btn {
    margin: 4px;
}

@media screen and (min-width: 1024px) {
    .input {
        font-size: 1.5rem;
    }
}

/* Cards */
.card {
    border-radius: 7px;
    box-shadow   : 0 0 20px 10px #f3f3f3;
    overflow     : hidden;
    margin       : 0;
    min-width    : 350px;
    /*Overflow   : To prevent border-radius to disapear*/
}

.card__header,
.card__body {
    padding: 2rem 3rem;
}

.card--primary .card__header {
    background: var(--color-primary);
    color     : #fff;
}

.card--secondary .card__header {
    background: var(--color-secondary);
    color     : #fff;
}

.card--primary .badge--primary {
    background: #126de4;
}

.card--secondary .badge--secondary {
    background: #02cdf1;
}



/* Plans */
.plan {
    transition: transform 0.5s ease-out;
}

.plan__name {
    color      : #fff;
    margin     : 0;
    font-weight: 500;
    font-size  : 2.4rem;
}

.plan__price {
    font-size: 6rem;
}

.plan__billing-cycle {
    font-size   : 2.4rem;
    font-weight : 300;
    opacity     : 0.8;
    margin-right: 1rem;
}
/* ... */

